facet-path/tests/snapshots/walk__walk_nested_struct.snap
---
source: facet-path/tests/walk.rs
expression: "v.events.join(\"\\n\")"
---
enter <root> (Outer)
enter label (String)
leave label (String)
enter inner (Inner)
enter inner.value (i32)
leave inner.value (i32)
leave inner (Inner)
leave <root> (Outer)
