facet-path/tests/snapshots/walk__walk_option.snap
---
source: facet-path/tests/walk.rs
expression: "v.events.join(\"\\n\")"
---
enter <root> (MaybeNamed)
enter name (Option)
enter name::Some (String)
leave name::Some (String)
leave name (Option)
leave <root> (MaybeNamed)
