facet-path/tests/snapshots/walk__walk_recursive_type.snap
---
source: facet-path/tests/walk.rs
expression: "v.events.join(\"\\n\")"
---
enter <root> (TreeNode)
enter value (i32)
leave value (i32)
enter children (Vec)
enter children[0] (TreeNode)
leave children[0] (TreeNode)
leave children (Vec)
leave <root> (TreeNode)
