facet-path/tests/snapshots/walk__walk_scalar.snap
---
source: facet-path/tests/walk.rs
expression: "v.events.join(\"\\n\")"
---
enter <root> (u32)
leave <root> (u32)
