facet-path/tests/snapshots/walk__walk_tuple_struct.snap
---
source: facet-path/tests/walk.rs
expression: "v.events.join(\"\\n\")"
---
enter <root> (Pair)
enter 0 (u32)
leave 0 (u32)
enter 1 (String)
leave 1 (String)
leave <root> (Pair)
